--- a/public/websocket.html
+++ b/public/websocket.html
@@ -22,14 +22,17 @@
 	<div class="col-md-12 col-centered">
 
 		<div class="row" style="margin-top: 80px;">
-			<input class="form-control" type="text" id="input-box" value="Test">
-			<div class="col-sm-12 col-centered">
+			<input class="form-control" type="text" id="input-box" value="Broadcasting from PC">
+			<div class="col-md-12 col-centered">
 				<h1 id="test">Test</h1>
 			</div>
 
 			<div class="row row-centered" style="margin-top: 40px;">
-				<div class="col-sm-12 col-centered">
-					<button class="btn btn-primary broadcast" style="width: 100%; cursor: pointer; display: inline-block;">Broadcast</button>
+				<div class="col-sm-6 col-centered">
+					<button class="btn btn-primary sendWS" style="width: 100%; cursor: pointer; display: inline-block;">Send via WS</button>
+				</div>
+				<div class="col-sm-6 col-centered">
+					<button class="btn btn-primary send" style="width: 100%; cursor: pointer; display: inline-block;">Send via HTTP</button>
 				</div>
 			</div>
 
